deploy/order/api/order-api.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api
  labels:
    component: order-api
spec:
  replicas: 1
  selector:
    matchLabels:
      component: order-api
  template:
    metadata:
      labels:
        component: order-api
    spec:
      containers:
        - name: order-api
          image: orderapi:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8004
