deploy/order/api/order-api.service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-api
spec:
  selector:
    component: order-api
  type: ClusterIP
  ports:
    - port: 8004
      targetPort: 80
